--- a/EsSplit/templates/index.html
+++ b/EsSplit/templates/index.html
@@ -167,7 +167,10 @@
               </div>
               <div id="split-details"></div>
               <button type="button" id="choose-friends-button">Wybierz znajomych</button>
-              <button type="submit">Utwórz podział</button>
+              <div class="create-split-actions">
+                <button type="submit">Utwórz podział</button>
+                <button type="button" id="cancel-split" class="btn-secondary">Anuluj</button>
+              </div>
             </form>
             <div id="spill-results"></div>
           </section>
