--- a/EsSplit/templates/index.html
+++ b/EsSplit/templates/index.html
@@ -431,8 +431,8 @@
     </div>
   </div>
 
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.min.js" integrity="sha256-lSjKY0/srUM+c9hlrcpC2e4IxXrZZLLVxMZ/8L0GkY=" crossorigin="anonymous"></script>
   <script src="{% static 'js/scripts.js' %}"></script>
 </body>
 
